# ros-multi-robot-simulation

./: LICENSE  README.md
my_robot/: CMakeLists.txt  package.xml
my_robot/launch/: spawn_robot.launch  spawn_world.launch  spawn_world2.launch  spawn_world3.launch  start_py.launch
my_robot/model/: model.config  model.sdf
my_robot/src/: robot1.py  robot2.py
my_robot/world/: world.world  world2.world  world3.world
