<?xml version="1.0"?>
<package format="2">
  <name>my_robot</name>
  <version>0.0.0</version>
  <description>The my_robot package</description>

  <maintainer email="miles@todo.todo">miles</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/> 
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" /> 
  </export>
</package>
